--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .container{
   border: 1px solid black;
   padding: 10px;
-  height: 200px;
-  width: 200px;
+  width: 150px;
+  display: flex;
+  justify-content: center;
+  float: left;
+  margin: 20px;
 }
